--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -132,41 +132,62 @@
 <tr><td>Michelin, France</td><td>• Has over 20 authorized tire dealers across Xinjiang</br></br>• Designed a special winter tire to meet rising demand in strong tires in Xinjiang and northeastern China</td></tr>
  
 <tr><td>Munich Re Group, Germany</td><td>• Offers road rescue services in 33 cities in Xinjiang through its insurance operator ERGO</td></tr>
- <tr><td>Nestle, Switzerland</td><td>• Buys tomato products from and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
- <tr><td>Nokia, Finland</td><td>"• Operates a branch in Urumqi</td></tr>
- <tr><td>• Has cooperated with all three of China's telecom firms (China Mobile, China Unicom, and China Telecom) on projects in Xinjiang"</td></tr>
- <tr><td>Novartis, Switzerland</td><td>• Operates a pharmaceuticals office in Urumqi</td></tr>
- <tr><td>Peugeot, France</td><td>• Has official dealerships across Xinjiang for the Citroen brand</td></tr>
- <tr><td>Philips, Netherlands</td><td>• Has hired sales positions in Xinjiang</td></tr>
- <tr><td>Rabobank Group, Netherlands</td><td>• Lent money, together with Deutsche Bank, to Xinjiang Qiya Aluminium and Power Company</td></tr>
- <tr><td>Renault, France</td><td>• Has official dealerships in five cities across Xinjiang</td></tr>
- <tr><td>Roche Group, Switzerland</td><td>• Has advertised for account managers in two cities in Xinjiang</td></tr>
- <tr><td>Royal Dutch Shell, Netherlands</td><td>"• In 2015, entered into a joint venture with Xinjiang-based Guanghui energy to purchase, import, and sell liquified natural gas</td></tr>
- <tr><td>• Lubricants business has staff working in Xinjiang•According to news reports, Shell signed a cooperation agreement with Xinjiang Oilfield Company in 2017. However, a representative for Shell stated that the company has "no active agreements currently in place with Xinjiang Oilfield Company." Shell did not respond to questions about when the agreement was terminated."</td></tr>
- <tr><td>Safran, France</td><td>• Buys aircraft parts from military company Xinjiang Machinery Research Institute under a contract that runs through 2023</td></tr>
- <tr><td>Saint-Gobain, France</td><td>• Has advertised for sales positions in Xinjiang</td></tr>
- <tr><td>Sanofi, France</td><td>• Has a distribution center in Xinjiang and has hired staff across the region</td></tr>
- <tr><td>SAP, Germany</td><td>• Offers long-term financial and technical support for the Xinjiang Football Youth Association</td></tr>
- <tr><td>Schneider Electric, France</td><td>• Operates a logistics center in Urumqi</td></tr>
- <tr><td>Siemens, Germany</td><td>"• Sells technology and components to firms across Xinjiang, including steel plants, solar panel factories, and coal-to-gas facilities</td></tr>
- <tr><td>• Signed a cooperation agreement with China Electronics Technology Group, which developed a policing app used in Xinjiang</td></tr>
- <tr><td>• Has a branch office in Urumqi"</td></tr>
- <tr><td>Swiss Re, Switzerland</td><td>"• Provides insurance for the Xinjiang Production and Construction Corps worth $1.2 million and aims to expand the program</td></tr>
- <tr><td>• Supports a renewable energy project in Bachu county turning excess cotton production into fuel for a biomass plant"</td></tr>
- <tr><td>Telefonica, Spain</td><td>• Owns a 45% stake in a joint venture with China Unicom working on big data software to aggregate users' anonymized location information; the software has been deployed in Xinjiang</td></tr>
- <tr><td>Tesco, United Kingdom</td><td>• Owns a minority stake in a joint venture with China Resources Enterprise, operating stores in Xinjiang</td></tr>
- <tr><td>ThyssenKrupp, Germany</td><td>• Sells mining equipment in Xinjiang</td></tr>
- <tr><td>Total, France</td><td>• Total has signed a long-term liquified natural gas supply agreement with Xinjiang-based Guanghui energy</td></tr>
- <tr><td>Unilever, Netherlands</td><td>• Buys tomato products and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
- <tr><td>Veolia Environment, France</td><td>• Operates a wastewater treatment plant in Urumqi</td></tr>
- <tr><td>Volkswagen, Germany</td><td>"• Volkswagen Group China built a factory near Urumqi, with a capacity of 50,000 vehicles a year</td></tr>
- <tr><td>• Has 38 authorized dealerships for brands including Audi, Porsche, Skoda, Scania, MAN, and Volkswagen</td></tr>
- <tr><td>• Built a testing ground in Xinjiang together with SAIC"</td></tr>
- <tr><td>Boehringer Ingelheim, Germany</td><td>• Has hired staff in Xinjiang</td></tr>
- <tr><td>UBS Group, Switzerland</td><td>• Owns a minority stake in Hikvision, which has built multiple government surveillance projects in Xinjiang</td></tr>
- <tr><td>Adidas, Germany</td><td>• Suppliers purchased yarn until 2019 from Huafu Fashion Co., which has a mill in Xinjiang, when Adidas suspended purchases pending an investigation</td></tr>
- <tr><td>Fresenius, Germany</td><td>• Has hired staff to work in Xinjiang</td></tr>
- <tr><td>Anheuser-Busch Inbev, Belgium</td><td>• Uses Xinjiang hops in Jiafeng beer</td></tr>
+ 
+<tr><td>Nestle, Switzerland</td><td>• Buys tomato products from and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
+ 
+<tr><td>Nokia, Finland</td><td>• Operates a branch in Urumqi</br></br>• Has cooperated with all three of China's telecom firms (China Mobile, China Unicom, and China Telecom) on projects in Xinjiang</td></tr>
+ 
+<tr><td>Novartis, Switzerland</td><td>• Operates a pharmaceuticals office in Urumqi</td></tr>
+ 
+<tr><td>Peugeot, France</td><td>• Has official dealerships across Xinjiang for the Citroen brand</td></tr>
+ 
+<tr><td>Philips, Netherlands</td><td>• Has hired sales positions in Xinjiang</td></tr>
+ 
+<tr><td>Rabobank Group, Netherlands</td><td>• Lent money, together with Deutsche Bank, to Xinjiang Qiya Aluminium and Power Company</td></tr>
+ 
+<tr><td>Renault, France</td><td>• Has official dealerships in five cities across Xinjiang</td></tr>
+ 
+<tr><td>Roche Group, Switzerland</td><td>• Has advertised for account managers in two cities in Xinjiang</td></tr>
+ 
+<tr><td>Royal Dutch Shell, Netherlands</td><td>• In 2015, entered into a joint venture with Xinjiang-based Guanghui energy to purchase, import, and sell liquified natural gas</br></br>• Lubricants business has staff working in Xinjiang</br></br>• According to news reports, Shell signed a cooperation agreement with Xinjiang Oilfield Company in 2017. However, a representative for Shell stated that the company has "no active agreements currently in place with Xinjiang Oilfield Company." Shell did not respond to questions about when the agreement was terminated</td></tr>
+ 
+<tr><td>Safran, France</td><td>• Buys aircraft parts from military company Xinjiang Machinery Research Institute under a contract that runs through 2023</td></tr>
+ 
+<tr><td>Saint-Gobain, France</td><td>• Has advertised for sales positions in Xinjiang</td></tr>
+ 
+<tr><td>Sanofi, France</td><td>• Has a distribution center in Xinjiang and has hired staff across the region</td></tr>
+ 
+<tr><td>SAP, Germany</td><td>• Offers long-term financial and technical support for the Xinjiang Football Youth Association</td></tr>
+ 
+<tr><td>Schneider Electric, France</td><td>• Operates a logistics center in Urumqi</td></tr>
+ 
+<tr><td>Siemens, Germany</td><td>• Sells technology and components to firms across Xinjiang, including steel plants, solar panel factories, and coal-to-gas facilities</br></br>• Signed a cooperation agreement with China Electronics Technology Group, which developed a policing app used in Xinjiang</br></br>• Has a branch office in Urumqi</td></tr>
+ 
+<tr><td>Swiss Re, Switzerland</td><td>• Provides insurance for the Xinjiang Production and Construction Corps worth $1.2 million and aims to expand the program</br></br>• Supports a renewable energy project in Bachu county turning excess cotton production into fuel for a biomass plant</td></tr>
+ 
+<tr><td>Telefonica, Spain</td><td>• Owns a 45% stake in a joint venture with China Unicom working on big data software to aggregate users' anonymized location information; the software has been deployed in Xinjiang</td></tr>
+ 
+<tr><td>Tesco, United Kingdom</td><td>• Owns a minority stake in a joint venture with China Resources Enterprise, operating stores in Xinjiang</td></tr>
+ 
+<tr><td>ThyssenKrupp, Germany</td><td>• Sells mining equipment in Xinjiang</td></tr>
+ 
+<tr><td>Total, France</td><td>• Total has signed a long-term liquified natural gas supply agreement with Xinjiang-based Guanghui energy</td></tr>
+ 
+<tr><td>Unilever, Netherlands</td><td>• Buys tomato products and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
+ 
+<tr><td>Veolia Environment, France</td><td>• Operates a wastewater treatment plant in Urumqi</td></tr>
+ 
+<tr><td>Volkswagen, Germany</td><td>• Volkswagen Group China built a factory near Urumqi, with a capacity of 50,000 vehicles a year</br></br>• Has 38 authorized dealerships for brands including Audi, Porsche, Skoda, Scania, MAN, and Volkswagen</br></br>• Built a testing ground in Xinjiang together with SAIC</td></tr>
+ 
+<tr><td>Boehringer Ingelheim, Germany</td><td>• Has hired staff in Xinjiang</td></tr>
+ 
+<tr><td>UBS Group, Switzerland</td><td>• Owns a minority stake in Hikvision, which has built multiple government surveillance projects in Xinjiang</td></tr>
+ 
+<tr><td>Adidas, Germany</td><td>• Suppliers purchased yarn until 2019 from Huafu Fashion Co., which has a mill in Xinjiang, when Adidas suspended purchases pending an investigation</td></tr>
+ 
+<tr><td>Fresenius, Germany</td><td>• Has hired staff to work in Xinjiang</td></tr>
+ 
+<tr><td>Anheuser-Busch Inbev, Belgium</td><td>• Uses Xinjiang hops in Jiafeng beer</td></tr>
 </tbody></table>
 
 <!–– add your tableizer data above this line––>
