--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -55,7 +55,7 @@
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>Company, Country</th><th>Presence in Xinjiang</th></tr></thead><tbody>
  
-<tr><td>ABB, Switzerland</td><td>• Operates a service center in Urumqi</br></br>• ABB components have been used in power lines, the Urumqi subway, high speed rail lines, aluminum plants, petrochemical plants, and hotels in Xinjiang"</td></tr>
+<tr><td>ABB, Switzerland</td><td>• Operates a service center in Urumqi</br></br>• ABB components have been used in power lines, the Urumqi subway, high speed rail lines, aluminum plants, petrochemical plants, and hotels in Xinjiang</td></tr>
  
 <tr><td>Adidas, Germany</td><td>• Suppliers purchased yarn until 2019 from Huafu Fashion Co., which has a mill in Xinjiang, when Adidas suspended purchases pending an investigation</td></tr>
 
@@ -73,11 +73,11 @@
  
 <tr><td>BASF, Germany</td><td>• Operates a chemical plant in Korla</br></br>• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"</td></tr>
  
-<tr><td>Bayer, Germany</td><td>• Has advertised for positions in Xinjiang</br></br>• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
+<tr><td>Bayer, Germany</td><td>• Advertised for positions in Xinjiang</br></br>• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
  
 <tr><td>BMW Group, Germany</td><td>• BMW-Brilliance joint venture has official dealerships in five cities across Xinjiang</br></br>• Has produced marketing campaign produced in Xinjiang</td></tr>
  
-<tr><td>Boehringer Ingelheim, Germany</td><td>• Has hired staff in Xinjiang</td></tr>
+<tr><td>Boehringer Ingelheim, Germany</td><td>• Hired staff in Xinjiang</td></tr>
 
 <tr><td>Bosch Group, Germany</td><td>• Sells water heaters for residential building development projects in Xinjiang</br></br>• Formed a strategic partnership with Xinjiang Hengxuan Real Estate Development</td></tr>
  
@@ -89,7 +89,7 @@
  
 <tr><td>Danone, France</td><td>• Owns a minority stake in Mengniu Dairy, which operates a yogurt and milk plant in Xinjiang</td></tr>
  
-<tr><td>Deutsche Bank, Germany</td><td>• Together with Rabobank, lent money to Xinjiang Qiya Aluminium and Power Company</br></br>• Managed bond issuance for Xinjiang Goldwind</td></tr>
+<tr><td>Deutsche Bank, Germany</td><td>• Together with Rabobank, lent money to Xinjiang Qiya Aluminium and Power Company</br></br>• Managed bond issuance for Xinjiang Goldwind Science & Technology Co., which produces wind power generations equipment</td></tr>
  
 <tr><td>Deutsche Bahn, Germany</td><td>• Operates an office for its logistics business in Urumqi</br></br>• Signed a joint venture agreement with Russian company Trans-Eurasia Logistics to operate a China-to-Europe rail line that passes through Xinjiang</td></tr>
  
@@ -117,7 +117,7 @@
  
 <tr><td>Johnson Controls International, Ireland</td><td>• Has advertised for jobs in Xinjiang</br></br>• Has a branch office in Xinjiang</td></tr>
  
-<tr><td>Kering, France</td><td>• Operates a Gucci story in Urumqi</td></tr>
+<tr><td>Kering, France</td><td>• Operates a Gucci store in Urumqi</td></tr>
  
 <tr><td>L'Oreal, France</td><td>• Operates a hair salon in Urumqi</td></tr>
  
@@ -149,7 +149,7 @@
  
 <tr><td>Peugeot, France</td><td>• Has official dealerships across Xinjiang for the Citroen brand</td></tr>
  
-<tr><td>Philips, Netherlands</td><td>• Has hired sales positions in Xinjiang</td></tr>
+<tr><td>Philips, Netherlands</td><td>• Hired for sales positions in Xinjiang</td></tr>
  
 <tr><td>Rabobank Group, Netherlands</td><td>• Lent money, together with Deutsche Bank, to Xinjiang Qiya Aluminium and Power Company</td></tr>
  
@@ -171,7 +171,7 @@
  
 <tr><td>Siemens, Germany</td><td>• Sells technology and components to firms across Xinjiang, including steel plants, solar panel factories, and coal-to-gas facilities</br></br>• Signed a cooperation agreement with China Electronics Technology Group, which developed a policing app used in Xinjiang</br></br>• Has a branch office in Urumqi</td></tr>
  
-<tr><td>Swiss Re, Switzerland</td><td>• Provides insurance for the Xinjiang Production and Construction Corps worth $1.2 million and aims to expand the program</br></br>• Supports a renewable energy project in Bachu county turning excess cotton production into fuel for a biomass plant</td></tr>
+<tr><td>Swiss Re, Switzerland</td><td>• Provides insurance for the Xinjiang Production and Construction Corps (also known as the Bingtuan) worth $1.2 million and aims to expand the program</br></br>• Supports a renewable energy project in Bachu county turning excess cotton production into fuel for a biomass plant</td></tr>
  
 <tr><td>Telefonica, Spain</td><td>• Owns a 45% stake in a joint venture with China Unicom working on big data software to aggregate users' anonymized location information; the software has been deployed in Xinjiang</td></tr>
  
@@ -179,7 +179,7 @@
  
 <tr><td>ThyssenKrupp, Germany</td><td>• Sells mining equipment in Xinjiang</td></tr>
  
-<tr><td>Total, France</td><td>• Total has signed a long-term liquified natural gas supply agreement with Xinjiang-based Guanghui energy</td></tr>
+<tr><td>Total, France</td><td>• Signed a long-term liquefied natural gas supply agreement with Xinjiang-based Guanghui International Natural Gas Trading Co.</td></tr>
  
 <tr><td>UBS Group, Switzerland</td><td>• Owns a minority stake in Hikvision, which has built multiple government surveillance projects in Xinjiang</td></tr>
 
