--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -59,7 +59,7 @@
  
 <tr><td>Adidas, Germany</td><td>• Suppliers purchased yarn until 2019 from Huafu Fashion Co., which has a mill in Xinjiang, when Adidas suspended purchases pending an investigation</td></tr>
 
-<tr><td>Air Liquide, France</td><td>• Has built plants in Xinjiang and opened a subsidiary in Urumqi</td></tr>
+<tr><td>Air Liquide, France</td><td>• Built plants in Xinjiang and opened a subsidiary in Urumqi</td></tr>
  
 <tr><td>Airbus, France</td><td>• Subsidiary Airbus Defence and Space worked on the Urumqi subway</td></tr>
 
@@ -69,13 +69,13 @@
  
 <tr><td>Assicurazioni Generali, Italy</td><td>• Provided insurance services in 2017 and 2018 to the Xinjiang government's Petroleum Administration Bureau worth approximately $1 million</td></tr>
 
-<tr><td>Aviva, United Kingdom</td><td>• Owns a 50% stake in a life insurance joint venture with Cofco that does business with Cofco subsidiaries in Xinjiang</td></tr>
+<tr><td>Aviva, United Kingdom</td><td>• Owns a 50% stake in a life insurance joint venture with COFCO that does business with COFCO subsidiaries in Xinjiang</td></tr>
  
-<tr><td>BASF, Germany</td><td>• Operates a chemical plant in Korla</br></br>• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes"</td></tr>
+<tr><td>BASF, Germany</td><td>• Operates a chemical plant in Korla</br></br>• Cooperates on tomato production with COFCO Tunhe, a state-owned company based in Xinjiang that produces tomatoes"</td></tr>
  
-<tr><td>Bayer, Germany</td><td>• Advertised for positions in Xinjiang</br></br>• Cooperates on tomato production with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
+<tr><td>Bayer, Germany</td><td>• Advertised for positions in Xinjiang</br></br>• Cooperates on tomato production with COFCO Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
  
-<tr><td>BMW Group, Germany</td><td>• BMW-Brilliance joint venture has official dealerships in five cities across Xinjiang</br></br>• Has produced marketing campaign produced in Xinjiang</td></tr>
+<tr><td>BMW Group, Germany</td><td>• BMW-Brilliance joint venture has official dealerships in five cities across Xinjiang</br></br>• Produced marketing campaign produced in Xinjiang</td></tr>
  
 <tr><td>Boehringer Ingelheim, Germany</td><td>• Hired staff in Xinjiang</td></tr>
 
@@ -89,7 +89,7 @@
  
 <tr><td>Danone, France</td><td>• Owns a minority stake in Mengniu Dairy, which operates a yogurt and milk plant in Xinjiang</td></tr>
  
-<tr><td>Deutsche Bank, Germany</td><td>• Together with Rabobank, lent money to Xinjiang Qiya Aluminium and Power Company</br></br>• Managed bond issuance for Xinjiang Goldwind Science & Technology Co., which produces wind power generations equipment</td></tr>
+<tr><td>Deutsche Bank, Germany</td><td>• Together with Rabobank, lent money to Xinjiang Qiya Aluminium and Power Company</br></br>• Managed bond issuance for Xinjiang Goldwind Science & Technology Co., which produces wind power generation equipment</td></tr>
  
 <tr><td>Deutsche Bahn, Germany</td><td>• Operates an office for its logistics business in Urumqi</br></br>• Signed a joint venture agreement with Russian company Trans-Eurasia Logistics to operate a China-to-Europe rail line that passes through Xinjiang</td></tr>
  
@@ -137,7 +137,7 @@
  
 <tr><td>Metro, Germany</td><td>• Buys fruit from Xinjiang</td></tr>
  
-<tr><td>Michelin, France</td><td>• Has over 20 authorized tire dealers across Xinjiang</br></br>• Designed a special winter tire to meet rising demand in strong tires in Xinjiang and northeastern China</td></tr>
+<tr><td>Michelin, France</td><td>• Has over 20 authorized tire dealers across Xinjiang</br></br>• Designed a special winter tire to meet rising demand for strong tires in Xinjiang and northeastern China</td></tr>
  
 <tr><td>Munich Re Group, Germany</td><td>• Offers road rescue services in 33 cities in Xinjiang through its insurance operator ERGO</td></tr>
  
