--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -71,7 +71,7 @@
 
 <tr><td>Aviva, United Kingdom</td><td>• Owns a 50% stake in a life insurance joint venture with COFCO that does business with COFCO subsidiaries in Xinjiang</td></tr>
  
-<tr><td>BASF, Germany</td><td>• Operates a chemical plant in Korla</br></br>• Cooperates on tomato production with COFCO Tunhe, a state-owned company based in Xinjiang that produces tomatoes"</td></tr>
+<tr><td>BASF, Germany</td><td>• Operates a chemical plant in Korla</br></br>• Cooperates on tomato production with COFCO Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
  
 <tr><td>Bayer, Germany</td><td>• Advertised for positions in Xinjiang</br></br>• Cooperates on tomato production with COFCO Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
  
