--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -181,7 +181,7 @@
  
 <tr><td>Total, France</td><td>• Signed a long-term liquefied natural gas supply agreement with Xinjiang-based Guanghui International Natural Gas Trading Co.</td></tr>
  
-<tr><td>UBS Group, Switzerland</td><td>• Owns a minority stake in Hikvision, which has built multiple government surveillance projects in Xinjiang</td></tr>
+<tr><td>UBS Group, Switzerland</td><td>• Owns a minority stake in Hikvision, which has installed or been a key development partner in multiple government surveillance systems in Xinjiang</td></tr>
 
 <tr><td>Unilever, Netherlands</td><td>• Buys tomato products and has a strategic partnership with Cofco Tunhe, a state-owned company based in Xinjiang that produces tomatoes</td></tr>
  
