--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -201,7 +201,7 @@
     <tr>
       <td>American Academy of Anti-Aging Medicine</td>
       <td>美国抗衰老医学会</td>
-      <td>Hainan Health Commission</td>
+      <td>Hainan Health Commission (formerly Hainan Health and Family Planning Commission)</td>
       <td>海南省卫生健康委员会</td>
       <td>United States</td>
       <td>Aging, Health</td>
@@ -529,6 +529,17 @@
       <td>Chongqing</td>
     </tr>
     <tr>
+      <td>British Chinese Society of Health Informatics</td>
+      <td>英国华人医疗信息协会</td>
+      <td>Chongqing Health Commission (formerly Chongqing Health and Family Planning Commission)</td>
+      <td>重庆市卫生健康委员会</td>
+      <td>United Kingdom</td>
+      <td>Health, Technology</td>
+      <td>Chongqing</td>
+      <td>2019-08-21</td>
+      <td>Chongqing, Guizhou, Sichuan, Tibet, Yunnan</td>
+    </tr>
+    <tr>
       <td>BSK International</td>
       <td>德国BSK国际教育机构</td>
       <td>Fujian Department of Education</td>
@@ -771,7 +782,7 @@
       <td>Chongqing, Yunnan</td>
     </tr>
     <tr>
-      <td>Cheongju Trade Union Discussion Forum</td>
+      <td>Cheongju Chamber of Commerce and Industry</td>
       <td>韩国清州商工会议所</td>
       <td>Hubei Department of Commerce</td>
       <td>湖北省商务厅</td>
@@ -2136,7 +2147,7 @@
     </tr>
     <tr>
       <td>Hanns Seidel Foundation (Zhejiang)</td>
-      <td>德国汉斯•赛德尔基金会浙江代表处</td>
+      <td>德国汉斯•赛德尔基金会</td>
       <td>Zhejiang Department of Education</td>
       <td>浙江省教育厅</td>
       <td>Germany</td>
@@ -2454,6 +2465,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>International Association of Exhibitions and Events (IAEE)</td>
+      <td>国际展览与项目协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2019-09-06</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>International Association Volunteers</td>
       <td>国际志愿者协会</td>
       <td>Hainan Department of Civil Affairs</td>
@@ -2650,6 +2672,17 @@
       <td>Hubei</td>
       <td>2017-05-15</td>
       <td>Anhui, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>International Silk Union</td>
+      <td>国际丝绸联盟</td>
+      <td>Zhejiang Department of Commerce</td>
+      <td>浙江省商务厅</td>
+      <td>Hong Kong</td>
+      <td>Trade</td>
+      <td>Zhejiang</td>
+      <td>2019-08-26</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>International Silkroad Trade and Culture Association</td>
@@ -3732,7 +3765,7 @@
     <tr>
       <td>Norwegian Mission Alliance</td>
       <td>协力会</td>
-      <td>Health Commission of Yunnan Province</td>
+      <td>Yunnan Health Commission (formerly Yunnan Health and Family Planning Commission)</td>
       <td>云南省卫生健康委员会</td>
       <td>Norway</td>
       <td>Civil Society Capacity-Building, Disabilities, Health</td>
@@ -3785,7 +3818,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Orbis International</td>
+      <td>Orbis International (Beijing)</td>
       <td>国际奥比斯</td>
       <td>Beijing Health Commission (formerly Beijing Health and Family Planning Commission)</td>
       <td>北京市卫生和计划生育委员会</td>
@@ -3796,9 +3829,9 @@
       <td>Beijing</td>
     </tr>
     <tr>
-      <td>Orbis International</td>
+      <td>Orbis International (Shanghai)</td>
       <td>国际奥比斯</td>
-      <td>Shanghai Municipal Health Commission</td>
+      <td>Shanghai Health Commission (formerly Shanghai Health and Family Planning Commission)</td>
       <td>上海市卫生健康委员会</td>
       <td>United States</td>
       <td>Health, Poverty Alleviation</td>
@@ -4040,7 +4073,7 @@
     <tr>
       <td>Project HOPE (Shanghai)</td>
       <td>世界健康基金会</td>
-      <td>Shanghai Health Commission (Shanghai Health and Family Planning Commission)</td>
+      <td>Shanghai Health Commission (formerly Shanghai Health and Family Planning Commission)</td>
       <td>上海市卫生和计划生育委员会</td>
       <td>United States</td>
       <td>Disaster Relief, Health, Poverty Alleviation</td>
@@ -4731,6 +4764,17 @@
       <td>Sichuan</td>
     </tr>
     <tr>
+      <td>The J. Willard and Alice S. Marriott Foundation</td>
+      <td>万豪家族基金会</td>
+      <td>Shanghai Administration of Culture and Tourism (formerly Shanghai Tourism Administration)</td>
+      <td>上海市文化和旅游局</td>
+      <td>United States</td>
+      <td>Labor, Tourism</td>
+      <td>Shanghai</td>
+      <td>2019-08-26</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jilin, Liaoning, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Tin Ka Ping Foundation</td>
       <td>田家炳基金会</td>
       <td>Ministry of Education</td>
@@ -5063,7 +5107,7 @@
     <tr>
       <td>Viva China Children's Cancer Foundation</td>
       <td>活泼中国儿童癌症基金会</td>
-      <td>Shanghai Municipal Health Commission</td>
+      <td>Shanghai Health Commission (formerly Shanghai Health and Family Planning Commission)</td>
       <td>上海市卫生健康委员会</td>
       <td>Hong Kong</td>
       <td>Health, Youth</td>
@@ -5171,18 +5215,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>World Gold Council</td>
-      <td>瑞士世界黄金协会</td>
-      <td>Shanghai Commission of Commerce</td>
-      <td>上海市商务委员会</td>
-      <td>Switzerland</td>
-      <td>Trade</td>
-      <td>Shanghai</td>
-      <td>2017-05-31</td>
-      <td>China</td>
-    </tr>
-    <tr>
-      <td>World Gold Council</td>
+      <td>World Gold Council (Beijing)</td>
       <td>瑞士世界黄金协会</td>
       <td>Beijing Commission of Commerce</td>
       <td>北京市商务委员会</td>
@@ -5191,6 +5224,17 @@
       <td>Beijing</td>
       <td>2019-08-08</td>
       <td>Beijing, Gansu, Hebei, Heilongjiang, Inner Mongolia, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanxi, Sichuan, Xinjiang</td>
+    </tr>
+    <tr>
+      <td>World Gold Council (Shanghai)</td>
+      <td>瑞士世界黄金协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>Switzerland</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2017-05-31</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>World Resources Institute</td>
@@ -5325,6 +5369,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Xinjiang, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>WRTO</td>
+      <td>世界研学旅游组织</td>
+      <td>Sichuan Department of Culture and Tourism (formerly Sichuan Department of Culture)</td>
+      <td>四川省文化和旅游厅</td>
+      <td>Canada</td>
+      <td>Tourism</td>
+      <td>Sichuan</td>
+      <td>2019-08-30</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Wu Zhi Qiao (Bridge to China) Charitable Foundation</td>
       <td>无止桥慈善基金</td>
       <td>Ministry of Housing and Urban-Rural Development</td>
@@ -5367,6 +5422,17 @@
       <td>Heilongjiang</td>
       <td>2017-06-12</td>
       <td>Beijing, Chongqing, Guangdong, Hebei, Heilongjiang, Jilin, Liaoning, Shanghai, Tianjin, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Yao Yuan Academy for Pharma Innovation</td>
+      <td>美中药源协会</td>
+      <td>Yunnan Commission of Commerce</td>
+      <td>云南省商务厅</td>
+      <td>United States</td>
+      <td>Health, Technology, Trade</td>
+      <td>Yunnan</td>
+      <td>2019-09-09</td>
+      <td>Zhejiang</td>
     </tr>
     <tr>
       <td>Yin Shin Leung Charitable Foundation</td>
