--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -57,7 +57,7 @@
  
 <tr><td>ABB, Switzerland</td><td>• Operates a service center in Urumqi</br></br>• ABB components have been used in power lines, the Urumqi subway, high speed rail lines, aluminum plants, petrochemical plants, and hotels in Xinjiang</td></tr>
  
-<tr><td>Adidas, Germany</td><td>• Suppliers purchased yarn until 2019 from Huafu Fashion Co., which has a mill in Xinjiang, when Adidas suspended purchases pending an investigation</td></tr>
+<tr><td>Adidas, Germany</td><td>• Until 2019, suppliers purchased yarn from Huafu Fashion Co., which has a mill in Xinjiang. Adidas says it has suspended purchases from Huafu pending an investigation and that the company “has no direct contractual relationship with any supplier in Xinjiang”</td></tr>
 
 <tr><td>Air Liquide, France</td><td>• Built plants in Xinjiang and opened a subsidiary in Urumqi</td></tr>
  
