--- a/piece/EuropeList/list.html
+++ b/piece/EuropeList/list.html
@@ -57,7 +57,7 @@
  
 <tr><td>ABB, Switzerland</td><td>• Operates a service center in Urumqi</br></br>• ABB components have been used in power lines, the Urumqi subway, high speed rail lines, aluminum plants, petrochemical plants, and hotels in Xinjiang</td></tr>
  
-<tr><td>Adidas, Germany</td><td>• Until 2019, suppliers purchased yarn from Huafu Fashion Co., which has a mill in Xinjiang. Adidas says it has suspended purchases from Huafu pending an investigation and that the company “has no direct contractual relationship with any supplier in Xinjiang”</td></tr>
+<tr><td>Adidas, Germany</td><td>• Until 2019, suppliers purchased yarn from Huafu Fashion Co., which has a mill in Xinjiang. Adidas says it has suspended purchases from Huafu pending an investigation and that the company “has no direct contractual relationship with any supplier in Xinjiang.”</td></tr>
 
 <tr><td>Air Liquide, France</td><td>• Built plants in Xinjiang and opened a subsidiary in Urumqi</td></tr>
  
@@ -157,7 +157,7 @@
  
 <tr><td>Roche Group, Switzerland</td><td>• Has advertised for account managers in two cities in Xinjiang</td></tr>
  
-<tr><td>Royal Dutch Shell, Netherlands</td><td>• In 2015, entered into a joint venture with Xinjiang-based Guanghui energy to purchase, import, and sell liquified natural gas</br></br>• Lubricants business has staff working in Xinjiang</br></br>• According to news reports, Shell signed a cooperation agreement with Xinjiang Oilfield Company in 2017. However, a representative for Shell stated that the company has "no active agreements currently in place with Xinjiang Oilfield Company." Shell did not respond to questions about when the agreement was terminated</td></tr>
+<tr><td>Royal Dutch Shell, Netherlands</td><td>• In 2015, entered into a joint venture with Xinjiang-based Guanghui energy to purchase, import, and sell liquified natural gas</br></br>• Lubricants business has staff working in Xinjiang</br></br>• According to news reports, Shell signed a cooperation agreement with Xinjiang Oilfield Company in 2017. However, a representative for Shell stated that the company has "no active agreements currently in place with Xinjiang Oilfield Company." Shell did not respond to questions about when the agreement was terminated.</td></tr>
  
 <tr><td>Safran, France</td><td>• Buys aircraft parts from military company Xinjiang Machinery Research Institute under a contract that runs through 2023</td></tr>
  
