--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -430,6 +430,17 @@
       <td>Zhejiang</td>
     </tr>
     <tr>
+      <td>Australia-China Business Club</td>
+      <td>澳中商贸发展促进会</td>
+      <td>Guangxi Department of Commerce</td>
+      <td>广西壮族自治区商务厅</td>
+      <td>Australia</td>
+      <td>Economic Development, Trade</td>
+      <td>Guangxi</td>
+      <td>2019-10-17</td>
+      <td>Guangxi</td>
+    </tr>
+    <tr>
       <td>Australia-China Economic Culture And Technology Development Cooperation</td>
       <td>澳中经济科技文化促进会</td>
       <td>Hunan Department of Science and Technology</td>
@@ -683,7 +694,7 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guizhou, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Ningxia, Qinghai, Shaanxi, Shandong, Sichuan, Tianjin, Xinjiang, Yunnan, Zhejiang</td>
     </tr>
     <tr>
-      <td>Casa Ricci Social Services</td>
+      <td>Casa Ricci Social Services (Sichuan)</td>
       <td>利玛窦社会服务基金会</td>
       <td>Sichuan Health Commission (formerly Sichuan Health and Family Planning Commission)</td>
       <td>四川省卫生和计划生育委员会</td>
@@ -694,7 +705,7 @@
       <td>Sichuan</td>
     </tr>
     <tr>
-      <td>Casa Ricci Social Services</td>
+      <td>Casa Ricci Social Services (Yunnan)</td>
       <td>利玛窦社会服务基金会</td>
       <td>Yunnan Health Commission (formerly Yunnan Health and Family Planning Commission)</td>
       <td>云南省卫生和计划生育委员会</td>
@@ -1893,7 +1904,18 @@
       <td>Beijing, Chongqing, Guangdong, Hubei, Jiangsu, Shaanxi, Shanghai, Sichuan, Tianjin, Yunnan</td>
     </tr>
     <tr>
-      <td>Go and Love Foundation</td>
+      <td>Go and Love Foundation (Jiangsu)</td>
+      <td>美国传仁基金会</td>
+      <td>Jiangsu Department of Education</td>
+      <td>江苏省教育厅</td>
+      <td>United States</td>
+      <td>Education, Environment, Health</td>
+      <td>Jiangsu</td>
+      <td>2019-10-22</td>
+      <td>Jiangsu</td>
+    </tr>
+    <tr>
+      <td>Go and Love Foundation (Yunnan)</td>
       <td>传仁基金会</td>
       <td>Yunnan Office of Overseas Chinese Affairs</td>
       <td>云南省人民政府侨务办公室</td>
@@ -2451,6 +2473,17 @@
       <td>Tourism, Trade</td>
       <td>Shanghai</td>
       <td>2017-10-26</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>International Association of Business Excellence</td>
+      <td>国际卓越运营协会</td>
+      <td>Jiangsu Department of Commerce</td>
+      <td>江苏省商务厅</td>
+      <td>Singapore</td>
+      <td>Economic Development, International Relations/Exchange</td>
+      <td>Jiangsu</td>
+      <td>2019-10-18</td>
       <td>China</td>
     </tr>
     <tr>
@@ -3895,7 +3928,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Overseas China Education Foundation</td>
+      <td>Overseas China Education Foundation (Guangxi)</td>
       <td>海外中国教育基金会</td>
       <td>Guangxi Department of Education</td>
       <td>广西省教育厅</td>
@@ -3906,7 +3939,7 @@
       <td>Guangxi</td>
     </tr>
     <tr>
-      <td>Overseas China Education Foundation</td>
+      <td>Overseas China Education Foundation (Sichuan)</td>
       <td>海外中国教育基金会</td>
       <td>Sichuan Department of Education</td>
       <td>四川省教育厅</td>
@@ -4742,7 +4775,7 @@
       <td>Hunan</td>
     </tr>
     <tr>
-      <td>Thailand-China Eastern Alliance Trade Promotion Council</td>
+      <td>Thailand-China Eastern Alliance Trade Promotion Council (Hunan)</td>
       <td>泰中东盟经贸促进会</td>
       <td>Hunan Department of Commerce</td>
       <td>湖南省商务厅</td>
@@ -4753,7 +4786,7 @@
       <td>Hunan</td>
     </tr>
     <tr>
-      <td>Thailand-China Eastern Alliance Trade Promotion Council</td>
+      <td>Thailand-China Eastern Alliance Trade Promotion Council (Sichuan)</td>
       <td>泰中东盟经贸促进会</td>
       <td>Sichuan Department of Commerce</td>
       <td>商务厅</td>
