--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1015,7 +1015,7 @@
     <tr>
       <td>China-Britain Business Council (Shenzhen)</td>
       <td>英国英中贸易协会</td>
-      <td>Guangdong Commission of Commerce</td>
+      <td>Guangdong Department of Commerce</td>
       <td>广东省商务厅</td>
       <td>United Kingdom</td>
       <td>Trade</td>
@@ -1561,6 +1561,17 @@
       <td>Beijing</td>
       <td>2018-03-20</td>
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>European Automobile Manufacturers Association (ACEA)</td>
+      <td>欧洲汽车工业协会</td>
+      <td>Beijing Bureau of Economy and Information Technology</td>
+      <td>北京市经济和信息化局</td>
+      <td>Belgium</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2019-10-26</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>European Broadcasting Union (EBU)</td>
@@ -2265,6 +2276,17 @@
       <td>Guangdong</td>
       <td>2018-09-29</td>
       <td>Guangdong</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Institute for Public Administration</td>
+      <td>香港公共行政学院</td>
+      <td>Chongqing Office of Hong Kong and Macau Affairs</td>
+      <td>重庆市人民政府港澳事务办公室</td>
+      <td>Hong Kong</td>
+      <td>Arts and Culture, Disaster Relief, Economic Development, Education, Health, Law and Governance</td>
+      <td>Chongqing</td>
+      <td>2019-11-05</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Hong Kong Institute of Chartered Secretaries</td>
@@ -3375,6 +3397,17 @@
       <td>International Relations/Exchange</td>
       <td>Guangdong</td>
       <td>2018-08-13</td>
+      <td>Guangdong</td>
+    </tr>
+    <tr>
+      <td>Macau International Investment Association</td>
+      <td>澳门国际投资协会</td>
+      <td>Guangdong Department of Commerce</td>
+      <td>广东省商务厅</td>
+      <td>Macau</td>
+      <td>Economic Development, Trade</td>
+      <td>Guangdong</td>
+      <td>2019-11-06</td>
       <td>Guangdong</td>
     </tr>
     <tr>
@@ -4744,7 +4777,7 @@
     <tr>
       <td>Taizhong City Li Zhaoxiong Private Charitable Foundation</td>
       <td>财团法人台中市私立李照雄慈善基金会</td>
-      <td>Chongqing People’s Government Office of Taiwan Affairs</td>
+      <td>Chongqing Office of Taiwan Affairs</td>
       <td>重庆市人民政府台湾事务办公室</td>
       <td>Taiwan</td>
       <td>Disaster Relief, Poverty Alleviation</td>
