--- a/piece/renewals/renewals_table.html
+++ b/piece/renewals/renewals_table.html
@@ -62,6 +62,7 @@ font-style: italic;
             font-weight: bold;
             font-size: 16px;
             cursor: default;
+          position: sticky; top: 0;
         }
         table.sortable {
       		font-size: 12px;
